--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ name = "mandel"
 version = "0.1.0"
 
 [dependencies]
-crossbeam = "0.2.10"
 image = "0.13.0"
 num = "0.1.37"
+rayon = "0.7.1"
 
 [profile]
 
