--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,7 @@ version = "0.1.0"
 image = "0.13.0"
 num = "0.1.37"
 rayon = "0.7.1"
-
-[profile]
-
+time = "0.1.38"
 [profile.release]
 lto = true
 opt-level = 3
